--- a/index.html
+++ b/index.html
@@ -29,17 +29,19 @@
     </header>
     <section class="hero" id="hero">
       <div>
-        <h1>
-          The First "International Conference on Data, Computation and Communication" is an event focused on the fields of data, computation and communication.
+        <h1 class="left">
+          The First "International Conference on Data, Computation and
+          Communication" is an event focused on the fields of data, computation
+          and communication.
         </h1>
         <span class="span1">(ICDCC-2024)</span>
-        <span class="date"> 29 Nov 2024 & 30 Nov 2024</span>
+        <span class="date bottom"> 29 Nov 2024 & 30 Nov 2024</span>
       </div>
-      <hr />
+      <hr class="right" />
     </section>
     <section class="scope" id="scope">
-      <h1>Scope of the Conference</h1>
-      <ul class="points">
+      <h1 class="head">Scope of the Conference</h1>
+      <ul class="points bottom">
         <li>
           Data science is an interdisciplinary field focused on extracting
           knowledge from typically large data sets and applying the knowledge
@@ -60,13 +62,13 @@
           manipulate scientific systems.
         </li>
       </ul>
-      <hr />
+      <hr class="right" />
     </section>
-    <section class="topic scope" id="topic">
+    <section class="topic scope head" id="topic">
       <h1>Conference topics</h1>
 
       <div class="topic-container">
-        <div class="topic-box">
+        <div class="topic-box left">
           <h3>Computational Science</h3>
           <ul>
             <strong>Computational Linguistics & NLP</strong>
@@ -99,7 +101,7 @@
             <li>High-Throughput Screening</li>
           </ul>
         </div>
-        <div class="topic-box">
+        <div class="topic-box left">
           <h3>Data Science</h3>
           <br />
           <ul>
@@ -124,7 +126,7 @@
           </ul>
         </div>
 
-        <div class="topic-box">
+        <div class="topic-box right">
           <h3>Statistics, Probability, Algebra, Calculus</h3>
           <ul>
             <strong>Statistics</strong>
@@ -148,7 +150,7 @@
           </ul>
         </div>
 
-        <div class="topic-box">
+        <div class="topic-box right">
           <h3>Cloud Computing</h3>
           <ul>
             <li>Cloud computing</li>
@@ -164,11 +166,11 @@
           </ul>
         </div>
       </div>
-      <hr />
+      <hr class="right" />
     </section>
     <section class="timeline scope" id="timeline">
-      <h1 class="heading">Timeline</h1>
-      <img src="Img/Frame 3.svg" alt="" />
+      <h1 class="heading head">Timeline</h1>
+      <img src="Img/Frame 3.svg" class="bottom" />
     </section>
     <footer>
       <div class="column">
@@ -184,6 +186,8 @@
         <h3 style="color: white">VIT Bhopal Information Center Indore</h3>
       </div>
     </footer>
+    <script src="https://unpkg.com/scrollreveal"></script>
+
     <script src="script.js"></script>
   </body>
 </html>
