--- a/pages/Contact_US.html
+++ b/pages/Contact_US.html
@@ -22,37 +22,17 @@
             <li><a href="organizing_team.html">The Team</a></li>
             <li><a href="Contact_US.html">Contact Us</a></li>
           </ul>
-          <!-- <h1 class="logo">Navbar</h1> -->
+
           <img src="../Img/logochhota 3.png" class="logo" />
         </div>
       </nav>
     </header>
     <section class="Contact scope" id="contact">
-      <h1>Contact Us</h1>
-      <!-- <div class="col">
-        <div class="topic-box">
-          <img src="../Img/card1.svg" />
-          <h3>Organizing Secretary</h3>
-          <div class="text">
-            <ul>
-              <li>Dr. Pon Harshavardhanan</li>
-              <li>Senior Associate Professor Data Science-Division</li>
-              <li>
-                School of Computing Science and Engineering VIT Bhopal
-                University
-              </li>
-              <li>Kothrikalan, Sehore</li>
-              <li>Madhya Pradesh - 466114</li>
-              <li>India.</li>
-              <li>Ph.No.-: +91 98407 68153</li>
-              <li>Email-: pon.harshavardhanan@vitbhopal.ac.in</li>
-            </ul>
-          </div>
-        </div>
-      </div> -->
-      <img class="image" src="../Img/pon.svg" />
-      <img src="../Img/vishnu.svg" class="image" />
-      <img src="../Img/contact.svg" class="image" />
+      <h1 class="head">Contact Us</h1>
+
+      <img class="image bottom" src="../Img/pon.svg" />
+      <img src="../Img/vishnu.svg" class="image bottom" />
+      <img src="../Img/contact.svg" class="image bottom" />
     </section>
     <footer>
       <div class="column">
@@ -67,5 +47,8 @@
         <h3 style="color: white">VIT Bhopal Information Center Indore</h3>
       </div>
     </footer>
+    <script src="https://unpkg.com/scrollreveal"></script>
+
+    <script src="../script.js"></script>
   </body>
 </html>
