--- a/pages/Registration.html
+++ b/pages/Registration.html
@@ -28,10 +28,10 @@
       </nav>
     </header>
     <section class="Registration scope">
-      <h1>Registration</h1>
+      <h1 class="head">Registration</h1>
       <div class="card">
-        <div class="topic-box">
-          <table>
+        <div class="topic-box bottom">
+          <table class="bottom">
             <thead>
               <th>Participants category</th>
               <th>IEEE members</th>
@@ -59,8 +59,8 @@
       <hr />
     </section>
     <section class="term scope">
-      <h1>Registration Fee Policy for ICDCC-2024</h1>
-      <p>
+      <h1 class="head">Registration Fee Policy for ICDCC-2024</h1>
+      <p class="left">
         <!-- center align -->
         <strong> Registration Fee:</strong> The registration fee for the
         International Conference on Digital Communication and Computing
@@ -68,14 +68,14 @@
         pay the full registration price, irrespective of whether they ultimately
         attend the conference or have already paid the registration charge.
       </p>
-      <p>
+      <p class="right">
         <strong>Due to Unforeseen Circumstances:</strong> In the event that the
         conference is canceled due to unforeseen circumstances, such as natural
         calamities or any conditions or mandates imposed by the statutory or
         regulatory bodies of the Government of India, the entire amount paid as
         registration will be refunded without any clauses or conditions.
       </p>
-      <p>
+      <p class="left">
         We understand that unexpected situations can arise, and we want to
         assure our participants that their financial investment in ICDCC-2024
         will be fully reimbursed if the conference is canceled for reasons
@@ -83,7 +83,7 @@
         valued, and we are committed to providing a fair and transparent
         registration fee policy.
       </p>
-      <p>
+      <p class="right">
         Should you have any questions or concerns regarding the registration fee
         or cancellation policy, please do not hesitate to contact our organizing
         secretrary for further assistance.
@@ -103,5 +103,8 @@
         <h3 style="color: white">VIT Bhopal Information Center Indore</h3>
       </div>
     </footer>
+    <script src="https://unpkg.com/scrollreveal"></script>
+
+    <script src="../script.js"></script>
   </body>
 </html>
