--- a/pages/organizing_team.html
+++ b/pages/organizing_team.html
@@ -22,27 +22,28 @@
             <li><a href="organizing_team.html">The Team</a></li>
             <li><a href="Contact_US.html">Contact Us</a></li>
           </ul>
-          <!-- <h1 class="logo">Navbar</h1> -->
+
           <img src="../Img/logochhota 3.png" class="logo" />
         </div>
       </nav>
     </header>
     <section>
       <div class="main">
-        <h2 style="text-align: center">Organizing Team</h2>
-        <p class="para">
+        <h2 style="text-align: center" class="head">Organizing Team</h2>
+        <p class="para bottom">
           Organizing a cohesive team requires clear communication and a shared
           sense of purpose, ensuring each member's strengths are utilized to
           achieve collective goals with efficiency and synergy. A well-organized
           team fosters collaboration, maximizes productivity, and ultimately
           leads to successful outcomes.
         </p>
-        <hr class="part" />
-        <div class="container">
+        <hr class="part bottom" />
+        <div class="container left">
           <h3>Chief Patron</h3>
           <ul style="list-style-type: circle">
             <li>
-              Honorable Dr. G. Viswanathan, Founder & Chancellor, VIT University.
+              Honorable Dr. G. Viswanathan, Founder & Chancellor, VIT
+              University.
             </li>
           </ul>
           <h3>Patrons</h3>
@@ -51,12 +52,13 @@
               Mr. Sankar Viswanathan, Vice President, VIT Bhopal University.
             </li>
             <li>
-              Ms. Kadhambari S Viswanathan, Assistant Vice President, VIT Bhopal University.
+              Ms. Kadhambari S Viswanathan, Assistant Vice President, VIT Bhopal
+              University.
             </li>
           </ul>
         </div>
-        <hr class="part" />
-        <div class="container">
+        <hr class="part bottom" />
+        <div class="container right">
           <h3>Co - Patrons</h3>
           <ul style="list-style-type: circle">
             <li>
@@ -75,95 +77,122 @@
             </li>
           </ul>
         </div>
-        <hr class="part" />
-        <div class="container">
+        <hr class="part bottom" />
+        <div class="container left">
           <h3>Organizing Secretary</h3>
           <ul style="list-style-type: circle">
             <li>
-              Dr. G. Vishnuvarthanan, Associate Professor, Data Science Division, SCSE, VIT Bhopal University.
+              Dr. G. Vishnuvarthanan, Associate Professor, Data Science
+              Division, SCSE, VIT Bhopal University.
             </li>
           </ul>
           <h3>Convener(s)</h3>
           <ul style="list-style-type: circle">
             <li>
-              Dr. Virendra Singh Kushwah, Assistant Professor (Senior), Programme Chair - Cloud Computing, SCSE, VIT Bhopal University.
+              Dr. Virendra Singh Kushwah, Assistant Professor (Senior),
+              Programme Chair - Cloud Computing, SCSE, VIT Bhopal University.
             </li>
             <li>
-              Dr. M. Manimaran, Senior Assistant Professor, Programme Chair - E-Commerce Technology, SCSE, VIT Bhopal University.
+              Dr. M. Manimaran, Senior Assistant Professor, Programme Chair -
+              E-Commerce Technology, SCSE, VIT Bhopal University.
             </li>
             <li>
-              Dr. S. Vairachilai, Assistant Professor (Senior), Programme Chair - Computational and Data Science, SCSE, VIT Bhopal University.
+              Dr. S. Vairachilai, Assistant Professor (Senior), Programme Chair
+              - Computational and Data Science, SCSE, VIT Bhopal University.
             </li>
             <li>
-              Dr. Rajdeep Singh Payal, Assistant Professor, SASL, VIT Bhopal University.
+              Dr. Rajdeep Singh Payal, Assistant Professor, SASL, VIT Bhopal
+              University.
             </li>
             <li>
-              Dr. Sayed Mohammed Zeeshan, Assistant Professor, SASL, VIT Bhopal University.
+              Dr. Sayed Mohammed Zeeshan, Assistant Professor, SASL, VIT Bhopal
+              University.
             </li>
             <li>
-              Dr. Saurav Prasad, Assistant Professor, SASL, VIT Bhopal University.
+              Dr. Saurav Prasad, Assistant Professor, SASL, VIT Bhopal
+              University.
             </li>
             <li>
-              Dr. Soumya Sankar Ghosh, Assistant Professor, SASL, VIT Bhopal University.
+              Dr. Soumya Sankar Ghosh, Assistant Professor, SASL, VIT Bhopal
+              University.
             </li>
           </ul>
           <h3>Local Advisory Body</h3>
           <ul style="list-style-type: circle">
             <li>
-              Dr. Hemant Kumar Nashine, Professor & Dean, School of Advanced Sciences and Languages (SASL), VIT Bhopal University.
+              Dr. Hemant Kumar Nashine, Professor & Dean, School of Advanced
+              Sciences and Languages (SASL), VIT Bhopal University.
             </li>
             <li>
-              Dr. Prasad Bedge, Associate Professor & Dean, School of Business Administration, VIT Bhopal University.
+              Dr. Prasad Bedge, Associate Professor & Dean, School of Business
+              Administration, VIT Bhopal University.
             </li>
             <li>
-              Dr. Debashis Adhikari, Professor & Dean, School of Electrical and Electronics, VIT Bhopal University.
+              Dr. Debashis Adhikari, Professor & Dean, School of Electrical and
+              Electronics, VIT Bhopal University.
             </li>
             <li>
-              Dr. S. Balaguru, Sr. Associate Professor & Dean (I/C), School of Mechanical Engineering, VIT Bhopal University.
+              Dr. S. Balaguru, Sr. Associate Professor & Dean (I/C), School of
+              Mechanical Engineering, VIT Bhopal University.
             </li>
             <li>
-              Dr. Sheetal Sharma, Professor & Dean, School of Architecture, VIT Bhopal University.
+              Dr. Sheetal Sharma, Professor & Dean, School of Architecture, VIT
+              Bhopal University.
             </li>
           </ul>
         </div>
-        <hr class="part" />
-        <div class="container">
-          <h3 style="text-align: center">Editorial Team</h3>
+        <hr class="part bottom" />
+        <div class="container right">
+          <h3 style="text-align: center" class="head">Editorial Team</h3>
           <h3>Editors-in-Chief</h3>
           <ul style="list-style-type: circle">
             <li>
-              Dr. Rajkumar Buyya, Professor and Director of the Cloud Computing and Distributed Systems (CLOUDS) Laboratory at the University of Melbourne, Australia.
+              Dr. Rajkumar Buyya, Professor and Director of the Cloud Computing
+              and Distributed Systems (CLOUDS) Laboratory at the University of
+              Melbourne, Australia.
             </li>
             <li>
-              Prof. Hua Wang, Professor, Victoria University, Melbourne, Victoria, Australia.
+              Prof. Hua Wang, Professor, Victoria University, Melbourne,
+              Victoria, Australia.
             </li>
             <li>
-              Dr. Pon Harshavardhanan, Associate Professor (Senior) & Division Head (Data Science), SCSE, VIT Bhopal University.
+              Dr. Pon Harshavardhanan, Associate Professor (Senior) & Division
+              Head (Data Science), SCSE, VIT Bhopal University.
             </li>
           </ul>
           <h3>Co-Editors</h3>
           <ul style="list-style-type: circle">
             <li>
-              Dr. G. Vishnuvarthanan, Associate Professor, Data Science Division, SCSE, VIT Bhopal University.
+              Dr. G. Vishnuvarthanan, Associate Professor, Data Science
+              Division, SCSE, VIT Bhopal University.
             </li>
             <li>
-              Dr. Virendra Singh Kushwah, Assistant Professor (Senior), Programme Chair - Cloud Computing, SCSE, VIT Bhopal University.
-            </li>
-            <li>Dr. M. Manimaran, Senior Assistant Professor, Programme Chair - E-Commerce Technology, SCSE, VIT Bhopal University.</li>
-            <li>
-              Dr. S. Vairachilai, Assistant Professor (Senior), Programme Chair - Computational and Data Science, SCSE, VIT Bhopal University.
+              Dr. Virendra Singh Kushwah, Assistant Professor (Senior),
+              Programme Chair - Cloud Computing, SCSE, VIT Bhopal University.
             </li>
             <li>
-              Dr. Rajdeep Singh Payal, Assistant Professor, SASL, VIT Bhopal University.
+              Dr. M. Manimaran, Senior Assistant Professor, Programme Chair -
+              E-Commerce Technology, SCSE, VIT Bhopal University.
             </li>
             <li>
-              Dr. Sayed Mohammed Zeeshan, Assistant Professor, SASL, VIT Bhopal University.
+              Dr. S. Vairachilai, Assistant Professor (Senior), Programme Chair
+              - Computational and Data Science, SCSE, VIT Bhopal University.
             </li>
             <li>
-              Dr. Saurav Prasad, Assistant Professor, SASL, VIT Bhopal University.
+              Dr. Rajdeep Singh Payal, Assistant Professor, SASL, VIT Bhopal
+              University.
             </li>
             <li>
-              Dr. Soumya Sankar Ghosh, Assistant Professor, SASL, VIT Bhopal University.
+              Dr. Sayed Mohammed Zeeshan, Assistant Professor, SASL, VIT Bhopal
+              University.
+            </li>
+            <li>
+              Dr. Saurav Prasad, Assistant Professor, SASL, VIT Bhopal
+              University.
+            </li>
+            <li>
+              Dr. Soumya Sankar Ghosh, Assistant Professor, SASL, VIT Bhopal
+              University.
             </li>
           </ul>
         </div>
@@ -183,6 +212,8 @@
         <h3 style="color: white">VIT Bhopal Information Center Indore</h3>
       </div>
     </footer>
-    <script src="script.js"></script>
+    <script src="https://unpkg.com/scrollreveal"></script>
+
+    <script src="../script.js"></script>
   </body>
 </html>
