--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>ICDCC-2024</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="Img/favicon.ico" type="image/x-icon">
   </head>
   <body>
     <header>
