--- a/pages/Contact_US.html
+++ b/pages/Contact_US.html
@@ -30,9 +30,9 @@
     <section class="Contact scope" id="contact">
       <h1 class="head">Contact Us</h1>
 
-      <img class="image bottom" src="../Img/pon.svg" />
-      <img src="../Img/vishnu.svg" class="image bottom" />
-      <img src="../Img/contact.svg" class="image bottom" />
+      <img class="image bottom" src="../Img/1.svg" />
+      <img src="../Img/2.svg" class="image bottom" />
+      <img src="../Img/3.svg" class="image bottom" />
     </section>
     <footer>
       <div class="column">
