--- a/pages/organizing_team.html
+++ b/pages/organizing_team.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ICDCC-2024</title>
     <link rel="stylesheet" href="../style.css" />
-    <link rel="icon" href="Img/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="Img/favicon.ico" type="image/x-icon" />
   </head>
   <body>
     <header>
@@ -28,7 +28,8 @@
         </div>
       </nav>
     </header>
-    <section>
+<div class="color">
+  <div class="padding">
       <div class="main">
         <h2 style="text-align: center" class="head">Organizing Team</h2>
         <p class="para bottom">
@@ -39,7 +40,11 @@
           leads to successful outcomes.
         </p>
         <hr class="part bottom" />
+        </div>
+</div>
+    <section >
         <div class="container left">
+          <div class="padding"></div>
           <h3>Chief Patron</h3>
           <ul style="list-style-type: circle">
             <li>
@@ -60,6 +65,7 @@
         </div>
         <hr class="part bottom" />
         <div class="container right">
+          <div class="padding"></div>
           <h3>Co - Patrons</h3>
           <ul style="list-style-type: circle">
             <li>
@@ -80,6 +86,7 @@
         </div>
         <hr class="part bottom" />
         <div class="container left">
+          <div class="padding"></div>
           <h3>Organizing Secretary</h3>
           <ul style="list-style-type: circle">
             <li>
@@ -146,6 +153,7 @@
         <div class="container right">
           <h3 style="text-align: center" class="head">Editorial Team</h3>
           <h3>Editors-in-Chief</h3>
+          <div class="padding"></div>
           <ul style="list-style-type: circle">
             <li>
               Dr. Rajkumar Buyya, Professor and Director of the Cloud Computing
@@ -161,6 +169,7 @@
               Head (Data Science), SCSE, VIT Bhopal University.
             </li>
           </ul>
+          
           <h3>Co-Editors</h3>
           <ul style="list-style-type: circle">
             <li>
@@ -196,6 +205,7 @@
               University.
             </li>
           </ul>
+          </div>
         </div>
       </div>
     </section>
