--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ICDCC-2024</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link
+      rel="shortcut icon"
+      href="%PUBLIC_URL%/Img/favicon.ico"
+      type="image/x-icon"
+    />
   </head>
   <body>
     <header>
