--- a/pages/Registration.html
+++ b/pages/Registration.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ICDCC-2024</title>
+    <link rel="stylesheet" href="../style.css" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link
       rel="shortcut icon"
